hphp/hack/test/typecheck/trait_const.php
<?hh // partial

trait T {
  const X = "a";
}
